--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,10 @@
 		<qiniu.version>7.2.11</qiniu.version>
 		<!-- JSON -->
 		<fastjson.version>1.2.47</fastjson.version>
+		<!-- Guava -->
+		<guava.version>20.0</guava.version>
+		<!-- Apache Commons Math  -->
+		<apache.commons.math.version>3.6.1</apache.commons.math.version>
 	</properties>
 
 	<!-- @TODO -->
@@ -75,6 +79,16 @@
 	</repositories>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>${apache.commons.math.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${guava.version}</version>
+		</dependency>
 		<!-- activemq -->
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
