--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.1.RELEASE</version>
+		<version>2.1.4.RELEASE</version>
 	</parent>
 	
 	<properties>
@@ -28,6 +28,7 @@
 		<slf4j.version>1.7.25</slf4j.version>
 		<!-- MQ-->
 		<activemq.version>5.13.3</activemq.version>
+		<hutool.version>5.0.7</hutool.version>
 		<junit.version>4.13</junit.version>
 		<disruptor.version>3.4.2</disruptor.version>
 		<!--七牛云-->
@@ -100,6 +101,15 @@
 			<artifactId>activemq-spring</artifactId>
 			<version>${activemq.version}</version>
 		</dependency>
+		<!-- reids依赖 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -147,6 +157,11 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-1.2-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-all</artifactId>
+			<version>${hutool.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
